[project]
name = "nnx_save"
version = "0.0.1"
description = "checkpointing for flax nnx models"
authors = [{ name = "Chibuzo Kelechi", email = "kelechichibuzo7@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "safetensors",
    "flax",
    "jax"
]

keywords = [
	'machine learning',
	'model checkpointing'
]

[project.urls]
Homepage = "https://pypi.org/project/shira_audio/"
Repository = "https://github.com/kelechi-c/nnx_save"

[tool.setuptools.packages.find]
where =["."]
include = ["nnx_save*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nnx_save"]
